--- a/src/components/HomeComponent.css
+++ b/src/components/HomeComponent.css
@@ -7,12 +7,10 @@
 .main-page {
   margin-bottom: 5rem;
 }
-.position {
-  text-align: center !important;
-  padding: 0.5rem;
-  box-sizing: border-box;
-  background-color: black;
-  color: white;
-  width: 100%;
+
+.title{
+ margin-right: 3rem;
+ margin-left: 3rem;
+  font-size: 1.5rem;
   letter-spacing: 2px;
 }
