--- a/src/components/PopularComponent.css
+++ b/src/components/PopularComponent.css
@@ -7,12 +7,9 @@
   .main-page {
     margin-bottom: 5rem;
   }
-  .position{
-    text-align: center !important;
-    padding: 0.5rem;
-    box-sizing: border-box;
-    font-size: 1.3rem;
-    background-color: black;
-    color: white;
-    width: 100%;
-  }
+  .title{
+    margin-right: 3rem;
+    margin-left: 3rem;
+     font-size: 1.5rem;
+     letter-spacing: 2px;
+   }
